lexer.cpp
/* Generated by re2c 1.1.1 on Mon Feb  4 16:05:28 2019 */
#line 1 "decaf.re"
#include <fstream>
#include <iostream>
#include "lexer.h"
#include <sstream>

#   define YYCTYPE     char
#   define YYPEEK()    getChar()
#   define YYSKIP()    do { in.ignore(); if (in.eof()) return Token::Eof; } while(0)
#   define YYBACKUP()  mar = in.tellg()
#   define YYRESTORE() in.seekg(mar)

using namespace std;

Token ExprLexer::getNextToken()
{
    lexeme = "";
    flag = false;
    while(1){
    #line 33 "decaf.re"


    if(state == 0){
        goto init;
    }else if(state == 1){
        goto line_comment;
    }else if(state == 2){
        goto block_comment;
    }

    line_comment:
        
#line 35 "lexer.cpp"
{
	YYCTYPE yych;
	yych = YYPEEK ();
	switch (yych) {
	case 0x00:	goto yy2;
	case '\n':	goto yy6;
	default:	goto yy4;
	}
yy2:
	YYSKIP ();
#line 47 "decaf.re"
	{ return Token::Eof; }
#line 48 "lexer.cpp"
yy4:
	YYSKIP ();
#line 45 "decaf.re"
	{ continue; }
#line 53 "lexer.cpp"
yy6:
	YYSKIP ();
#line 46 "decaf.re"
	{ state = 0; continue; }
#line 58 "lexer.cpp"
}
#line 48 "decaf.re"


    block_comment:
        
#line 65 "lexer.cpp"
{
	YYCTYPE yych;
	yych = YYPEEK ();
	switch (yych) {
	case 0x00:	goto yy10;
	case '\n':	goto yy14;
	case ' ':
	case '\'':	goto yy16;
	case '*':	goto yy19;
	default:	goto yy12;
	}
yy10:
	YYSKIP ();
#line 56 "decaf.re"
	{ return Token::Error; }
#line 81 "lexer.cpp"
yy12:
	YYSKIP ();
yy13:
#line 52 "decaf.re"
	{ continue; }
#line 87 "lexer.cpp"
yy14:
	YYSKIP ();
#line 54 "decaf.re"
	{ continue; }
#line 92 "lexer.cpp"
yy16:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case ' ':
	case '\'':	goto yy16;
	default:	goto yy18;
	}
yy18:
#line 53 "decaf.re"
	{ continue; }
#line 104 "lexer.cpp"
yy19:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '/':	goto yy20;
	default:	goto yy13;
	}
yy20:
	YYSKIP ();
#line 55 "decaf.re"
	{ state = 0; continue; }
#line 116 "lexer.cpp"
}
#line 57 "decaf.re"


    init:
    
#line 123 "lexer.cpp"
{
	YYCTYPE yych;
	yych = YYPEEK ();
	switch (yych) {
	case 0x00:	goto yy24;
	case '\n':	goto yy28;
	case ' ':
	case '\'':	goto yy30;
	case '!':	goto yy33;
	case '"':	goto yy35;
	case '%':	goto yy37;
	case '&':	goto yy39;
	case '(':	goto yy40;
	case ')':	goto yy42;
	case '*':	goto yy44;
	case '+':	goto yy46;
	case '-':	goto yy48;
	case '/':	goto yy50;
	case '0':	goto yy52;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy54;
	case ';':	goto yy56;
	case '<':	goto yy58;
	case '=':	goto yy60;
	case '>':	goto yy61;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'd':
	case 'g':
	case 'h':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'o':
	case 'p':
	case 'q':
	case 's':
	case 'u':
	case 'x':
	case 'y':
	case 'z':	goto yy63;
	case '[':	goto yy66;
	case ']':	goto yy68;
	case 'b':	goto yy70;
	case 'c':	goto yy71;
	case 'e':	goto yy72;
	case 'f':	goto yy73;
	case 'i':	goto yy74;
	case 'n':	goto yy75;
	case 'r':	goto yy76;
	case 't':	goto yy77;
	case 'v':	goto yy78;
	case 'w':	goto yy79;
	case '{':	goto yy80;
	case '|':	goto yy82;
	case '}':	goto yy83;
	default:	goto yy26;
	}
yy24:
	YYSKIP ();
#line 66 "decaf.re"
	{lexeme = "EOF"; return Token::Eof; }
#line 220 "lexer.cpp"
yy26:
	YYSKIP ();
yy27:
#line 65 "decaf.re"
	{lexeme = "Error"; return Token::Error; }
#line 226 "lexer.cpp"
yy28:
	YYSKIP ();
#line 61 "decaf.re"
	{ lineno++; continue; }
#line 231 "lexer.cpp"
yy30:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case ' ':
	case '\'':	goto yy30;
	default:	goto yy32;
	}
yy32:
#line 62 "decaf.re"
	{ continue; }
#line 243 "lexer.cpp"
yy33:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '=':	goto yy85;
	default:	goto yy34;
	}
yy34:
#line 82 "decaf.re"
	{lexeme = "!"; return Token::OpNegar; }
#line 254 "lexer.cpp"
yy35:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '"':	goto yy87;
	default:	goto yy35;
	}
yy37:
	YYSKIP ();
#line 73 "decaf.re"
	{lexeme = "%"; return Token::OpMod; }
#line 266 "lexer.cpp"
yy39:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '&':	goto yy89;
	default:	goto yy27;
	}
yy40:
	YYSKIP ();
#line 86 "decaf.re"
	{ lexeme = "("; return Token::OpenPar; }
#line 278 "lexer.cpp"
yy42:
	YYSKIP ();
#line 87 "decaf.re"
	{ lexeme = ")"; return Token::ClosePar; }
#line 283 "lexer.cpp"
yy44:
	YYSKIP ();
#line 69 "decaf.re"
	{lexeme = "*"; return Token::OpMul; }
#line 288 "lexer.cpp"
yy46:
	YYSKIP ();
#line 67 "decaf.re"
	{lexeme = "+"; return Token::OpSum; }
#line 293 "lexer.cpp"
yy48:
	YYSKIP ();
#line 68 "decaf.re"
	{lexeme = "-"; return Token::OpRes; }
#line 298 "lexer.cpp"
yy50:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '*':	goto yy91;
	case '/':	goto yy93;
	default:	goto yy51;
	}
yy51:
#line 70 "decaf.re"
	{lexeme = "/"; return Token::OpDiv; }
#line 310 "lexer.cpp"
yy52:
	YYSKIP ();
	YYBACKUP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'x':	goto yy95;
	default:	goto yy55;
	}
yy53:
#line 83 "decaf.re"
	{lexeme = "num"; return Token::Num; }
#line 322 "lexer.cpp"
yy54:
	YYSKIP ();
	yych = YYPEEK ();
yy55:
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy54;
	default:	goto yy53;
	}
yy56:
	YYSKIP ();
#line 85 "decaf.re"
	{ lexeme = ";"; return Token::Semicolon; }
#line 344 "lexer.cpp"
yy58:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '<':	goto yy97;
	case '=':	goto yy99;
	default:	goto yy59;
	}
yy59:
#line 74 "decaf.re"
	{lexeme = "<"; return Token::OpMen; }
#line 356 "lexer.cpp"
yy60:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '=':	goto yy101;
	default:	goto yy27;
	}
yy61:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '=':	goto yy103;
	case '>':	goto yy105;
	default:	goto yy62;
	}
yy62:
#line 75 "decaf.re"
	{lexeme = ">"; return Token::OpMay; }
#line 375 "lexer.cpp"
yy63:
	YYSKIP ();
	yych = YYPEEK ();
yy64:
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
	case '|':	goto yy63;
	default:	goto yy65;
	}
yy65:
#line 109 "decaf.re"
	{ lexeme="iden"; return Token::Id; }
#line 450 "lexer.cpp"
yy66:
	YYSKIP ();
#line 90 "decaf.re"
	{ lexeme = "["; return Token::OpenBra; }
#line 455 "lexer.cpp"
yy68:
	YYSKIP ();
#line 91 "decaf.re"
	{ lexeme = "]"; return Token::CloseBra; }
#line 460 "lexer.cpp"
yy70:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'o':	goto yy107;
	case 'r':	goto yy108;
	default:	goto yy64;
	}
yy71:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'l':	goto yy109;
	case 'o':	goto yy110;
	default:	goto yy64;
	}
yy72:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'l':	goto yy111;
	case 'x':	goto yy112;
	default:	goto yy64;
	}
yy73:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'a':	goto yy113;
	case 'o':	goto yy114;
	default:	goto yy64;
	}
yy74:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'f':	goto yy115;
	case 'n':	goto yy117;
	default:	goto yy64;
	}
yy75:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'e':	goto yy118;
	case 'u':	goto yy119;
	default:	goto yy64;
	}
yy76:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'e':	goto yy120;
	case 'o':	goto yy121;
	default:	goto yy64;
	}
yy77:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'r':	goto yy122;
	default:	goto yy64;
	}
yy78:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'o':	goto yy123;
	default:	goto yy64;
	}
yy79:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'h':	goto yy124;
	default:	goto yy64;
	}
yy80:
	YYSKIP ();
#line 88 "decaf.re"
	{ lexeme = "{"; return Token::OpenKey; }
#line 542 "lexer.cpp"
yy82:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '|':	goto yy125;
	default:	goto yy64;
	}
yy83:
	YYSKIP ();
#line 89 "decaf.re"
	{ lexeme = "}"; return Token::CloseKey; }
#line 554 "lexer.cpp"
yy85:
	YYSKIP ();
#line 79 "decaf.re"
	{lexeme = "!="; return Token::OpDif; }
#line 559 "lexer.cpp"
yy87:
	YYSKIP ();
#line 110 "decaf.re"
	{ lexeme="str"; return Token::StrLit; }
#line 564 "lexer.cpp"
yy89:
	YYSKIP ();
#line 80 "decaf.re"
	{lexeme = "&&"; return Token::OpAnd; }
#line 569 "lexer.cpp"
yy91:
	YYSKIP ();
#line 64 "decaf.re"
	{ printf("%s\n", "block comment"); state = 2; continue;}
#line 574 "lexer.cpp"
yy93:
	YYSKIP ();
#line 63 "decaf.re"
	{ printf("%s\n", "line comment"); state = 1; continue;}
#line 579 "lexer.cpp"
yy95:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy127;
	default:	goto yy96;
	}
yy96:
	YYRESTORE ();
	goto yy53;
yy97:
	YYSKIP ();
#line 71 "decaf.re"
	{lexeme = "<<"; return Token::OpMeM; }
#line 615 "lexer.cpp"
yy99:
	YYSKIP ();
#line 76 "decaf.re"
	{lexeme = "<="; return Token::OpMenI; }
#line 620 "lexer.cpp"
yy101:
	YYSKIP ();
#line 78 "decaf.re"
	{lexeme = "=="; return Token::OpIgual; }
#line 625 "lexer.cpp"
yy103:
	YYSKIP ();
#line 77 "decaf.re"
	{lexeme = ">="; return Token::OpMayI; }
#line 630 "lexer.cpp"
yy105:
	YYSKIP ();
#line 72 "decaf.re"
	{lexeme = ">>"; return Token::OpMaM; }
#line 635 "lexer.cpp"
yy107:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'o':	goto yy130;
	default:	goto yy64;
	}
yy108:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'e':	goto yy131;
	default:	goto yy64;
	}
yy109:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'a':	goto yy132;
	default:	goto yy64;
	}
yy110:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'n':	goto yy133;
	default:	goto yy64;
	}
yy111:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 's':	goto yy134;
	default:	goto yy64;
	}
yy112:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 't':	goto yy135;
	default:	goto yy64;
	}
yy113:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'l':	goto yy136;
	default:	goto yy64;
	}
yy114:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'r':	goto yy137;
	default:	goto yy64;
	}
yy115:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
	case '|':	goto yy63;
	default:	goto yy116;
	}
yy116:
#line 100 "decaf.re"
	{lexeme="if";return Token::KIf;}
#line 765 "lexer.cpp"
yy117:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 't':	goto yy139;
	default:	goto yy64;
	}
yy118:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'w':	goto yy141;
	default:	goto yy64;
	}
yy119:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'l':	goto yy143;
	default:	goto yy64;
	}
yy120:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 't':	goto yy144;
	default:	goto yy64;
	}
yy121:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 't':	goto yy145;
	default:	goto yy64;
	}
yy122:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'u':	goto yy147;
	default:	goto yy64;
	}
yy123:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'i':	goto yy148;
	default:	goto yy64;
	}
yy124:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'i':	goto yy149;
	default:	goto yy64;
	}
yy125:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
	case '|':	goto yy63;
	default:	goto yy126;
	}
yy126:
#line 81 "decaf.re"
	{lexeme = "||"; return Token::OpOr; }
#line 895 "lexer.cpp"
yy127:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy127;
	default:	goto yy129;
	}
yy129:
#line 84 "decaf.re"
	{lexeme = "num"; return Token::Num; }
#line 927 "lexer.cpp"
yy130:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'l':	goto yy150;
	default:	goto yy64;
	}
yy131:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'a':	goto yy152;
	default:	goto yy64;
	}
yy132:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 's':	goto yy153;
	default:	goto yy64;
	}
yy133:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 't':	goto yy154;
	default:	goto yy64;
	}
yy134:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'e':	goto yy155;
	default:	goto yy64;
	}
yy135:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'e':	goto yy157;
	default:	goto yy64;
	}
yy136:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 's':	goto yy158;
	default:	goto yy64;
	}
yy137:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
	case '|':	goto yy63;
	default:	goto yy138;
	}
yy138:
#line 99 "decaf.re"
	{lexeme="for";return Token::KFor;}
#line 1050 "lexer.cpp"
yy139:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
	case '|':	goto yy63;
	default:	goto yy140;
	}
yy140:
#line 101 "decaf.re"
	{lexeme="int";return Token::KInt;}
#line 1124 "lexer.cpp"
yy141:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
	case '|':	goto yy63;
	default:	goto yy142;
	}
yy142:
#line 102 "decaf.re"
	{lexeme="new";return Token::KNew;}
#line 1198 "lexer.cpp"
yy143:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'l':	goto yy159;
	default:	goto yy64;
	}
yy144:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'u':	goto yy161;
	default:	goto yy64;
	}
yy145:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
	case '|':	goto yy63;
	default:	goto yy146;
	}
yy146:
#line 105 "decaf.re"
	{lexeme="rot";return Token::KRot;}
#line 1286 "lexer.cpp"
yy147:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'e':	goto yy162;
	default:	goto yy64;
	}
yy148:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'd':	goto yy164;
	default:	goto yy64;
	}
yy149:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'l':	goto yy166;
	default:	goto yy64;
	}
yy150:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
	case '|':	goto yy63;
	default:	goto yy151;
	}
yy151:
#line 92 "decaf.re"
	{lexeme="bool";return Token::KBool;}
#line 1381 "lexer.cpp"
yy152:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'k':	goto yy167;
	default:	goto yy64;
	}
yy153:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 's':	goto yy169;
	default:	goto yy64;
	}
yy154:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'i':	goto yy171;
	default:	goto yy64;
	}
yy155:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
